--- a/css/style.css
+++ b/css/style.css
@@ -591,7 +591,7 @@ a:focus {
   margin-bottom: 50px;
 }
 
-.row {
+.row-1{
   display: flex;
   flex-direction: row;
   justify-content: space-around;
