--- a/css/semStyles.css
+++ b/css/semStyles.css
@@ -1,5 +1,6 @@
 .header-sem{
     margin-top: 30px;
+    margin-bottom: 30px;
     text-align: center;
     font-family: 'Poppins', sans-serif;   
 }
@@ -8,19 +9,66 @@
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    gap: 20px;
+    gap: 50px;
     justify-content: center;
+    margin-bottom: 50px;
 }
 
 .child{
     height:300px;
     width: 300px;
-    background-color: #B8E7E1;
+    background-color: #ECC9EE;
     border-radius: 10px;
 }
 /* styles inside each box */
+.header-child-sem h3{
+    padding: 20px;
+    background-color: #FFDCB6;
+    border-radius:  10px 0px 10px 0px;
+}
+
 h3{ 
     text-align: center;
-    margin-top: 30px;
     font-family: 'Anton', sans-serif;
 }
+/* drop down btn*/
+.dropdown{
+    margin-top: 60px;
+    text-align: center;
+    display: block;
+    position: relative;
+    
+}
+
+.dropbtn{
+    background-color: #C9A7EB;
+    color: white;
+    padding: 16px;
+    font-size: 16px;
+    border: none;
+    cursor: pointer;
+}
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 16px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+  }
+.dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+  }
+  .dropdown-content a:hover{
+    background-color: #c9c0d2;
+  }
+  
+  .dropdown:hover .dropbtn{
+    background-color: #051806;
+  }
+  .dropdown:hover .dropdown-content{
+    display: block;
+  }
